first form showed

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,11 +2,17 @@ appname = select_tags
 httpport = 8080
 runmode = dev
 autorender = false
+apphost = 127.0.0.1:8080
+appurl = http://127.0.0.1:8080/
+
+secretkey =
+
 
 EnableAdmin = true
 AdminHttpAddr = "localhost"
 AdminHttpPort = 8088
 copyrequestbody = true
+
 
 [DEFAULT]
 db_string = "root:newpass@/dishtag?charset=utf8"
