cloned blueimp parts from github,because of GFW,add Image1-6 in dish/add

--- a/conf/compress_jquery_upload.conf
+++ b/conf/compress_jquery_upload.conf
@@ -14,8 +14,7 @@
 					"jquery.fileupload-process.js",
 					"jquery.fileupload-image.js",
 					"jquery.fileupload-validate.js",
-					"jquery.fileupload-ui.js",
-					"main.js"
+					"jquery.fileupload-ui.js"
 					
 			
 				]
