orm db_string加上timezone确保时间不倒退8小时,menu的edit 和delete都写完了

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -15,5 +15,5 @@ copyrequestbody = true
 
 
 [DEFAULT]
-db_string = "root:newpass@/dishtag?charset=utf8"
+db_string = "root:newpass@/dishtag?charset=utf8&loc=Asia%2FShanghai"
 db_type = "mysql"
